# postgres-rs

./: .dockerignore  Cargo.toml  Dockerfile  POSTGRES_ROADMAP.md  README.md
.github/workflows/: docker-publish.yml
crates/auth/: Cargo.toml
crates/auth/src/: auth.rs  crypto.rs  lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: executor.rs  index.rs  lib.rs  lock.rs  native.rs  plpgsql.rs  storage.rs  wal.rs
crates/engine/src/disk/: buffer.rs  heap.rs  mod.rs  page.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  server.rs
crates/sql/: Cargo.toml
crates/sql/src/: ast.rs  lib.rs  parser.rs  serialize.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  numeric.rs
include/: postgres_rs_fmgr.h
src/: auth.rs  bind.rs  crypto.rs  executor.rs  hba.rs  index.rs  lib.rs  main.rs  protocol.rs  server.rs  storage.rs  types.rs  wal.rs
src/disk/: pwal.rs
src/sql/: ast.rs  lexer.rs  mod.rs  parser.rs  serialize.rs
tests/: c_extension_abi.rs  concurrency_stress.rs  crash_recovery.rs  fuzz_smoke.rs  index_tests.rs  orm_fixtures.rs  psql_compat.rs  sql_tests.rs  sqllogictest.rs  wal_tests.rs  wire_protocol_tests.rs
tests/fixtures/: orm_introspect.sql  orm_schema.sql
tests/slt/: aggregates.slt  basic.slt  joins.slt  nulls.slt
