[package]
name = "postgres-rs"
version = "0.1.0"
edition = "2024"
description = "A fast, lightweight, PostgreSQL wire-compatible database written in Rust"

[dependencies]

# Micro-benchmark proving the index speedup. Run with:
#   cargo run --release --bin bench
[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
